--- a/comingsoon.html
+++ b/comingsoon.html
@@ -26,7 +26,7 @@
 </head>
 <body id="backtotop" style="background: url(https://images.unsplash.com/photo-1538670178144-b8db27bad945?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80) no-repeat center; background-size: cover; background-attachment: fixed;">
 
-<div class="fullwidth clearfix" style="position: relative;">
+<div class="fullwidth clearfix" style="position: relative; padding: 60px 30px;">
 	<div class="overlay"></div>
 	<div id="topcontainer" class="bodycontainer clearfix" data-uk-scrollspy="{cls:'uk-animation-fade', delay: 300, repeat: true}">
 		
@@ -39,7 +39,7 @@
 
 <div class="arrow-separator arrow-white"></div>
 
-<div class="fullwidth colour1 clearfix" style="padding: 30px;">
+<div class="fullwidth colour1 clearfix">
 	<div id="countdown" class="bodycontainer clearfix" data-uk-scrollspy="{cls:'uk-animation-fade', delay: 300, repeat: true}">
 
 		<div id="countdowncont" class="clearfix">
@@ -68,12 +68,12 @@
 
 <div class="arrow-separator arrow-theme"></div>
 
-<div class="fullwidth colour4 clearfix" style="padding: 30px">
+<div class="fullwidth colour4 clearfix">
 	<div id="maincont" class="bodycontainer clearfix" data-uk-scrollspy="{cls:'uk-animation-fade', delay: 300, repeat: true}">
 
 		<h3 style="color:#666;">While waiting, you can listen to our radio broadcast</h3>
 
-		<audio controls>
+		<audio controls style="min-width: 50%;">
 		  <source src="https://s3.vinhostmedia.com/8016/;" type="audio/mpeg">
 		</audio>
 	
