Update logo and date launch

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div class="overlay"></div>
 	<div id="topcontainer" class="bodycontainer clearfix" data-uk-scrollspy="{cls:'uk-animation-fade', delay: 300, repeat: true}">
 		
-		<p><img class="logo" src="comingsoon/images/logo.jpg" alt=""></p>
+		<img class="logo" src="assets/images/kronair-logo.png" style="width:200px;">
 		<h1 style="text-shadow:rgba(0, 0, 0, 0.35) 1px 1px 2px;color: #555;"><strong>Korean Broadcasting System</strong> 
 			<br>is coming soon..</h1>
 		
@@ -71,7 +71,7 @@
 <div class="fullwidth colour4 clearfix">
 	<div id="maincont" class="bodycontainer clearfix" data-uk-scrollspy="{cls:'uk-animation-fade', delay: 300, repeat: true}">
 
-		<h3 style="color:#666;">While waiting, you can listen to our radio broadcast</h3>
+		<h3 style="color:#666;margin-bottom:30px;">While waiting, you can listen to our radio broadcast</h3>
 
 		<audio controls style="min-width: 50%;">
 		  <source src="https://s3.vinhostmedia.com/8016/;" type="audio/mpeg">
