--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 <!-- Website Template designed by www.downloadwebsitetemplates.co.uk -->
 <meta charset="UTF-8">
-<title>KrOnAir - Korean Broadcasting System</title>
+<title>KR:OnAir - All about Korea in one station</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
@@ -31,9 +31,10 @@
 	<div id="topcontainer" class="bodycontainer clearfix" data-uk-scrollspy="{cls:'uk-animation-fade', delay: 300, repeat: true}">
 		
 		<img class="logo" src="assets/images/kronair-logo.png" style="width:200px;">
-		<h1 style="text-shadow:rgba(0, 0, 0, 0.35) 1px 1px 2px;color: #555;"><strong>Korean Broadcasting System</strong> 
-			<br>is coming soon..</h1>
-		
+		<h1 style="text-shadow:rgba(0, 0, 0, 0.35) 1px 1px 2px;color: #555;">
+			매일 들어줄 <br>
+			<strong>All about Korea in one station</strong> 
+			<br>In our way to greet you soon..</h1>
 	</div>
 </div>
 
