--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 		<img class="logo" src="assets/images/kronair-logo.png" style="width:200px;">
 		<h1 style="text-shadow:rgba(0, 0, 0, 0.35) 1px 1px 2px;color: #555;">
 			매일 들어줄 <br>
-			<strong>All about Korea in one station</strong> 
-			<br>In our way to greet you soon..</h1>
+			<strong>All About Korea in One Station</strong></h1>
+		<p class="h2">In our way to greet you soon..</p>
 	</div>
 </div>
 
