--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
 <!-- Website Template designed by www.downloadwebsitetemplates.co.uk -->
 <meta charset="UTF-8">
 <title>KR:OnAir - All about Korea in one station</title>
-<meta name="description" content="">
+<meta name="description" content="All about Korea in one station">
 <meta name="keywords" content="">
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="comingsoon/images/ico/apple-touch-icon-144.png">
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="comingsoon/images/ico/apple-touch-icon-114.png">
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="comingsoon/images/ico/apple-touch-icon-72.png">
-<link rel="apple-touch-icon-precomposed" href="comingsoon/images/ico/apple-touch-icon-57.png">
-<link rel="shortcut icon" href="comingsoon/images/logo.jpg">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/images/kronair-logo-white.jpg">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/images/kronair-logo-white.jpg">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/images/kronair-logo-white.jpg">
+<link rel="apple-touch-icon-precomposed" href="assets/images/kronair-logo-white.jpg">
+<link rel="shortcut icon" href="assets/images/kronair-logo-white.jpg">
+
+<meta property="og:type" content="landing" />
+<meta property="og:title" content="KR:OnAir" />
+<meta property="og:description" content="All about Korea in one station" />
+<meta property="og:url" content="https://kronair.id/" />
+<meta property="og:image" content="assets/images/kronair-logo-white.jpg" />
+
 <!--[if IE]><![endif]-->
 <link rel="stylesheet" href="comingsoon/css/style.css">
 <script src="comingsoon/js/jquery.js"></script>
