Update og image

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <meta property="og:title" content="KR:OnAir" />
 <meta property="og:description" content="All about Korea in one station" />
 <meta property="og:url" content="https://kronair.id/" />
-<meta property="og:image" content="assets/images/kronair-logo-white.jpg" />
+<meta property="og:image" content="https://kronair.id/assets/images/kronair-logo-white.jpg" />
 
 <!--[if IE]><![endif]-->
 <link rel="stylesheet" href="comingsoon/css/style.css">
