--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
 	<div id="topcontainer" class="bodycontainer clearfix" data-uk-scrollspy="{cls:'uk-animation-fade', delay: 300, repeat: true}">
 		
 		<img class="logo" src="assets/images/kronair-logo.png" style="width:200px;">
-		<h1 style="text-shadow:rgba(0, 0, 0, 0.35) 1px 1px 2px;color: #555;">
-			매일 들어줄 <br>
-			<strong>All About Korea in One Station</strong></h1>
+		<h1 style="text-shadow:rgba(0, 0, 0, 0.35) 1px 1px 2px;">매일 들어줄 KR:OnAir</h1>
+		<h1><span>All About Korea in One Station</span></h1>
 		<p class="h2">In our way to greet you soon..</p>
 	</div>
 </div>
