--- a/index.html
+++ b/index.html
@@ -95,12 +95,10 @@
 		<div id="socialmedia" class="clearfix">
 			<p>Follow us</p>
 			<ul>
-				<li><a title="" href="#" rel="external"><span class="fa fa-instagram"></span></a></li>
-				<li><a title="" href="#" rel="external"><span class="fa fa-facebook"></span></a></li>
-				<li><a title="" href="#" rel="external"><span class="fa fa-twitter"></span></a></li>
+				<li><a title="instagram" href="https://www.instagram.com/kr.onair/" rel="external"><span class="fa fa-instagram"></span></a></li>
 			</ul>
 		</div>
-		<p>Copyright 2022 <a title="website template" href="https://www.downloadwebsitetemplates.co.uk" rel="external">TaeyangKulture.com</a></p>
+		<p>Copyright 2022 <a title="website template" href="https://taeyangkulture.com/" rel="external">TaeyangKulture.com</a></p>
 	</div>
 </div>
    
